# TunePro

./: .replit  CMakeLists.txt  Info.plist.in  README.md  README_ASSISTANT.md  README_DOWNLOAD.md  README_MACOS_FIX.md  build_simple.sh  replit.md
.ccls-cache/@@home@runner@workspace/: @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno-base.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm-generic@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@asm@errno.h.blob  @nix@store@91n0z8dfp0jxvqda5cqm1k766k135kwn-linux-headers-6.14.7@include@linux@errno.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stdarg___gnuc_va_list.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_header_macro.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_max_align_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_null.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_nullptr_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_offsetof.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_ptrdiff_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_size_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@__stddef_wchar_t.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdarg.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stddef.h.blob  @nix@store@9yai3fkf5wz8yj9jisv1mhaglh9j5hv9-clang-19.1.7-lib@lib@clang@19@include@stdint.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@alloca.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@byteswap.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@cpu-set.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@endian.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@endianness.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@errno.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@floatn-common.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@floatn.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@flt-eval-method.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@fp-fast.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@fp-logb.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@iscanonical.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@libc-header-start.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@libm-simd-decl-stubs.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@locale.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@long-double.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@math-vector.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@mathcalls-helper-functions.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@mathcalls-narrow.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@mathcalls.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@pthread_stack_min-dynamic.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@pthreadtypes-arch.h.blob  @nix@store@vm10zh43xgfxvgrqs8brz6v6xyrq9qin-glibc-2.40-66-dev@include@bits@pthreadtypes.h.blob  (+238 more)
.ccls-cache/@home@runner@workspace/: Source@AIModelLoader.cpp  Source@AIModelLoader.cpp.blob  Source@AIModelLoader.h  Source@AIModelLoader.h.blob  Source@AIModelLoader_fixed.cpp  Source@AIModelLoader_fixed.cpp.blob  Source@AIModelLoader_linux_stub.cpp  Source@AIModelLoader_linux_stub.cpp.blob  Source@LookAndFeel.h  Source@LookAndFeel.h.blob  Source@ModeSelector.cpp.blob  Source@ModeSelector.h  Source@ModeSelector.h.blob  Source@Parameters.h  Source@Parameters.h.blob  Source@PitchCorrectionEngine.cpp  Source@PitchCorrectionEngine.cpp.blob  Source@PitchCorrectionEngine.h  Source@PitchCorrectionEngine.h.blob  Source@PitchCorrectionEngine_linux_stub.cpp  Source@PitchCorrectionEngine_linux_stub.cpp.blob  Source@PluginEditor.cpp.blob  Source@PluginEditor.h.blob  Source@PluginProcessor.h.blob  (+16 more)
JUCE/: CMakeLists.txt
JuceLibraryCode/: JuceHeader.h
Source/: AIModelLoader.cpp  AIModelLoader.h  AIModelLoader_backup.cpp  LookAndFeel.cpp  ModeSelector.cpp  Parameters.cpp  PitchCorrectionEngine.cpp  PluginEditor.cpp  PluginEditor_minimal.cpp  PluginProcessor.cpp  PresetManager.cpp  Utils.cpp
attached_assets/: Pasted-Last-login-Thu-Aug-21-00-00-59-on-ttys000-marselmacevans-iMac-Marsel-cd-Users-marselmacevans-D-1755724694934_1755724694935.txt  Pasted-Last-login-Thu-Aug-21-00-02-37-on-ttys000-marselmacevans-iMac-Marsel-cd-Users-marselmacevans-D-1755726311385_1755726311386.txt  Pasted-Last-login-Wed-Aug-20-23-42-45-on-ttys000-marselmacevans-iMac-Marsel-cd-Users-marselmacevans-D-1755722826093_1755722826094.txt  PluginEditor_minimal_1755717936375.cpp  PluginProcessor_1755717936376.cpp
libs/crepe/: CMakeLists.txt  crepe.cpp  crepe.h
libs/fftw/: CMakeLists.txt  fftw3.cpp  fftw3.h
libs/rubberband/: CMakeLists.txt  RubberBandStretcher.cpp  rubberband.h
libs/tensorflow_lite/: CMakeLists.txt  tensorflow_lite.cpp  tensorflow_lite.h
(+6 files in other folders)
